Fix IE Bottom Alignmnet Sizing

--- a/public/static/css/app/main.css
+++ b/public/static/css/app/main.css
@@ -2966,7 +2966,7 @@ main.index-threaded {
 					
 					li.post-attachment {
 						display: inline-block;
-						vertical-align: bottom;
+						vertical-align: text-bottom;
 						padding: 0 0.75em 0.75em 0;
 					}
 						div.attachment-container {
